update ช่องค้นหาข้อมูล ของ customer แต่ยังไม่สำเร็จ

--- a/ceosofts/resources/css/app.css
+++ b/ceosofts/resources/css/app.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+.input-group > input,
+.input-group > .form-control {
+    height: 40px !important; /* เพิ่มขนาดให้สูงขึ้น และใช้ !important */
+}
