revise dashboard not finish

--- a/ceosofts/resources/css/app.css
+++ b/ceosofts/resources/css/app.css
@@ -1,8 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-
+/* Bootstrap styles are loaded via CDN in layouts/app.blade.php */
 
 .input-group > input,
 .input-group > .form-control {
